Titanic challenge trial solution

--- a/kaggle-titanic/titanic-challenge.ipynb
+++ b/kaggle-titanic/titanic-challenge.ipynb
@@ -2,123 +2,127 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1eeb1676-ae71-4c78-9d65-26fc85c3dd68",
-   "metadata": {},
    "source": [
     "# Titanic - Machine Learning from Disaster\n",
     "\n",
     "Trying out the Titanic challenge on Kaggle, as a beginner in ML challenges"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "e0080c6d-798d-420e-b2a7-8cd02e198ae6",
-   "metadata": {},
    "source": [
     "## Setting up the environment"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "b214d194-c2c4-4195-96aa-2d626649f735",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 2,
+   "source": [
+    "import numpy as np\r\n",
+    "import pandas as pd\r\n",
+    "\r\n",
+    "import matplotlib.pyplot as plt\r\n",
+    "\r\n",
+    "# The following lines adjust the granularity of reporting.\r\n",
+    "pd.options.display.max_rows = 10\r\n",
+    "pd.options.display.float_format = \"{:.1f}\".format\r\n",
+    "\r\n",
+    "from jupyterthemes import jtplot\r\n",
+    "jtplot.style('onedork', figsize=(16, 9))\r\n",
+    "\r\n",
+    "print(\"Imported the modules.\")"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Imported the modules.\n"
      ]
     }
    ],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import tensorflow as tf\n",
-    "from tensorflow import feature_column\n",
-    "from tensorflow.keras import layers\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# The following lines adjust the granularity of reporting.\n",
-    "pd.options.display.max_rows = 10\n",
-    "pd.options.display.float_format = \"{:.1f}\".format\n",
-    "\n",
-    "from jupyterthemes import jtplot\n",
-    "jtplot.style('onedork', figsize=(16, 9))\n",
-    "\n",
-    "tf.keras.backend.set_floatx('float32')\n",
-    "\n",
-    "print(\"Imported the modules.\")"
-   ]
+   "metadata": {
+    "tags": []
+   }
   },
   {
    "cell_type": "markdown",
-   "id": "c231f9b2-88c7-43d1-ba32-7a5bc14c089e",
-   "metadata": {},
    "source": [
-    "### Checking if the GPU is being utilised"
-   ]
+    "## Loading the data"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4688974a-b06c-4349-aada-fb2d8e159e5a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GPU Available\n"
-     ]
-    }
-   ],
    "source": [
-    "if tf.config.list_physical_devices('GPU'):\n",
-    "    print('GPU Available')\n",
-    "else:\n",
-    "    print('No GPU found. Working on CPU')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2cc6ace2-4391-44b4-baf2-e698ecc94d3c",
-   "metadata": {},
-   "source": [
-    "## Loading the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "5eaf643d-10a9-41ce-b400-7ffc730427f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labelled_df = pd.read_csv('./train.csv')\n",
+    "labelled_df = pd.read_csv('./train.csv')\r\n",
     "test_df = pd.read_csv('./test.csv')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "92ec0ad2-4e20-45ea-b067-ab2d7777a7db",
-   "metadata": {},
    "source": [
     "### Labelled dataset"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ddd56589-b24a-4383-ae84-a1b2327e0491",
-   "metadata": {},
+   "execution_count": 4,
+   "source": [
+    "labelled_df"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
+      "text/plain": [
+       "     PassengerId  Survived  Pclass  \\\n",
+       "0              1         0       3   \n",
+       "1              2         1       1   \n",
+       "2              3         1       3   \n",
+       "3              4         1       1   \n",
+       "4              5         0       3   \n",
+       "..           ...       ...     ...   \n",
+       "886          887         0       2   \n",
+       "887          888         1       1   \n",
+       "888          889         0       3   \n",
+       "889          890         1       1   \n",
+       "890          891         0       3   \n",
+       "\n",
+       "                                                  Name     Sex  Age  SibSp  \\\n",
+       "0                              Braund, Mr. Owen Harris    male 22.0      1   \n",
+       "1    Cumings, Mrs. John Bradley (Florence Briggs Th...  female 38.0      1   \n",
+       "2                               Heikkinen, Miss. Laina  female 26.0      0   \n",
+       "3         Futrelle, Mrs. Jacques Heath (Lily May Peel)  female 35.0      1   \n",
+       "4                             Allen, Mr. William Henry    male 35.0      0   \n",
+       "..                                                 ...     ...  ...    ...   \n",
+       "886                              Montvila, Rev. Juozas    male 27.0      0   \n",
+       "887                       Graham, Miss. Margaret Edith  female 19.0      0   \n",
+       "888           Johnston, Miss. Catherine Helen \"Carrie\"  female  NaN      1   \n",
+       "889                              Behr, Mr. Karl Howell    male 26.0      0   \n",
+       "890                                Dooley, Mr. Patrick    male 32.0      0   \n",
+       "\n",
+       "     Parch            Ticket  Fare Cabin Embarked  \n",
+       "0        0         A/5 21171   7.2   NaN        S  \n",
+       "1        0          PC 17599  71.3   C85        C  \n",
+       "2        0  STON/O2. 3101282   7.9   NaN        S  \n",
+       "3        0            113803  53.1  C123        S  \n",
+       "4        0            373450   8.1   NaN        S  \n",
+       "..     ...               ...   ...   ...      ...  \n",
+       "886      0            211536  13.0   NaN        S  \n",
+       "887      0            112053  30.0   B42        S  \n",
+       "888      2        W./C. 6607  23.4   NaN        S  \n",
+       "889      0            111369  30.0  C148        C  \n",
+       "890      0            370376   7.8   NaN        Q  \n",
+       "\n",
+       "[891 rows x 12 columns]"
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -322,75 +326,60 @@
        "</table>\n",
        "<p>891 rows × 12 columns</p>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "     PassengerId  Survived  Pclass  \\\n",
-       "0              1         0       3   \n",
-       "1              2         1       1   \n",
-       "2              3         1       3   \n",
-       "3              4         1       1   \n",
-       "4              5         0       3   \n",
-       "..           ...       ...     ...   \n",
-       "886          887         0       2   \n",
-       "887          888         1       1   \n",
-       "888          889         0       3   \n",
-       "889          890         1       1   \n",
-       "890          891         0       3   \n",
-       "\n",
-       "                                                  Name     Sex  Age  SibSp  \\\n",
-       "0                              Braund, Mr. Owen Harris    male 22.0      1   \n",
-       "1    Cumings, Mrs. John Bradley (Florence Briggs Th...  female 38.0      1   \n",
-       "2                               Heikkinen, Miss. Laina  female 26.0      0   \n",
-       "3         Futrelle, Mrs. Jacques Heath (Lily May Peel)  female 35.0      1   \n",
-       "4                             Allen, Mr. William Henry    male 35.0      0   \n",
-       "..                                                 ...     ...  ...    ...   \n",
-       "886                              Montvila, Rev. Juozas    male 27.0      0   \n",
-       "887                       Graham, Miss. Margaret Edith  female 19.0      0   \n",
-       "888           Johnston, Miss. Catherine Helen \"Carrie\"  female  NaN      1   \n",
-       "889                              Behr, Mr. Karl Howell    male 26.0      0   \n",
-       "890                                Dooley, Mr. Patrick    male 32.0      0   \n",
-       "\n",
-       "     Parch            Ticket  Fare Cabin Embarked  \n",
-       "0        0         A/5 21171   7.2   NaN        S  \n",
-       "1        0          PC 17599  71.3   C85        C  \n",
-       "2        0  STON/O2. 3101282   7.9   NaN        S  \n",
-       "3        0            113803  53.1  C123        S  \n",
-       "4        0            373450   8.1   NaN        S  \n",
-       "..     ...               ...   ...   ...      ...  \n",
-       "886      0            211536  13.0   NaN        S  \n",
-       "887      0            112053  30.0   B42        S  \n",
-       "888      2        W./C. 6607  23.4   NaN        S  \n",
-       "889      0            111369  30.0  C148        C  \n",
-       "890      0            370376   7.8   NaN        Q  \n",
-       "\n",
-       "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 4
     }
    ],
-   "source": [
-    "labelled_df"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "1e6daad3-4449-49ff-888a-31f1bc5a8c2b",
-   "metadata": {},
    "source": [
     "### Test dataset"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "f7efda8c-ea91-4733-811f-8cfb07c322aa",
-   "metadata": {},
+   "execution_count": 5,
+   "source": [
+    "test_df"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
+      "text/plain": [
+       "     PassengerId  Pclass                                          Name  \\\n",
+       "0            892       3                              Kelly, Mr. James   \n",
+       "1            893       3              Wilkes, Mrs. James (Ellen Needs)   \n",
+       "2            894       2                     Myles, Mr. Thomas Francis   \n",
+       "3            895       3                              Wirz, Mr. Albert   \n",
+       "4            896       3  Hirvonen, Mrs. Alexander (Helga E Lindqvist)   \n",
+       "..           ...     ...                                           ...   \n",
+       "413         1305       3                            Spector, Mr. Woolf   \n",
+       "414         1306       1                  Oliva y Ocana, Dona. Fermina   \n",
+       "415         1307       3                  Saether, Mr. Simon Sivertsen   \n",
+       "416         1308       3                           Ware, Mr. Frederick   \n",
+       "417         1309       3                      Peter, Master. Michael J   \n",
+       "\n",
+       "        Sex  Age  SibSp  Parch              Ticket  Fare Cabin Embarked  \n",
+       "0      male 34.5      0      0              330911   7.8   NaN        Q  \n",
+       "1    female 47.0      1      0              363272   7.0   NaN        S  \n",
+       "2      male 62.0      0      0              240276   9.7   NaN        Q  \n",
+       "3      male 27.0      0      0              315154   8.7   NaN        S  \n",
+       "4    female 22.0      1      1             3101298  12.3   NaN        S  \n",
+       "..      ...  ...    ...    ...                 ...   ...   ...      ...  \n",
+       "413    male  NaN      0      0           A.5. 3236   8.1   NaN        S  \n",
+       "414  female 39.0      0      0            PC 17758 108.9  C105        C  \n",
+       "415    male 38.5      0      0  SOTON/O.Q. 3101262   7.2   NaN        S  \n",
+       "416    male  NaN      0      0              359309   8.1   NaN        S  \n",
+       "417    male  NaN      1      1                2668  22.4   NaN        C  \n",
+       "\n",
+       "[418 rows x 11 columns]"
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -582,54 +571,35 @@
        "</table>\n",
        "<p>418 rows × 11 columns</p>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "     PassengerId  Pclass                                          Name  \\\n",
-       "0            892       3                              Kelly, Mr. James   \n",
-       "1            893       3              Wilkes, Mrs. James (Ellen Needs)   \n",
-       "2            894       2                     Myles, Mr. Thomas Francis   \n",
-       "3            895       3                              Wirz, Mr. Albert   \n",
-       "4            896       3  Hirvonen, Mrs. Alexander (Helga E Lindqvist)   \n",
-       "..           ...     ...                                           ...   \n",
-       "413         1305       3                            Spector, Mr. Woolf   \n",
-       "414         1306       1                  Oliva y Ocana, Dona. Fermina   \n",
-       "415         1307       3                  Saether, Mr. Simon Sivertsen   \n",
-       "416         1308       3                           Ware, Mr. Frederick   \n",
-       "417         1309       3                      Peter, Master. Michael J   \n",
-       "\n",
-       "        Sex  Age  SibSp  Parch              Ticket  Fare Cabin Embarked  \n",
-       "0      male 34.5      0      0              330911   7.8   NaN        Q  \n",
-       "1    female 47.0      1      0              363272   7.0   NaN        S  \n",
-       "2      male 62.0      0      0              240276   9.7   NaN        Q  \n",
-       "3      male 27.0      0      0              315154   8.7   NaN        S  \n",
-       "4    female 22.0      1      1             3101298  12.3   NaN        S  \n",
-       "..      ...  ...    ...    ...                 ...   ...   ...      ...  \n",
-       "413    male  NaN      0      0           A.5. 3236   8.1   NaN        S  \n",
-       "414  female 39.0      0      0            PC 17758 108.9  C105        C  \n",
-       "415    male 38.5      0      0  SOTON/O.Q. 3101262   7.2   NaN        S  \n",
-       "416    male  NaN      0      0              359309   8.1   NaN        S  \n",
-       "417    male  NaN      1      1                2668  22.4   NaN        C  \n",
-       "\n",
-       "[418 rows x 11 columns]"
       ]
      },
-     "execution_count": 8,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 5
     }
    ],
-   "source": [
-    "test_df"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "4d8c30f4-0312-4dd3-8783-09fae1dce9c0",
-   "metadata": {},
+   "execution_count": 6,
+   "source": [
+    "labelled_df.describe()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
+      "text/plain": [
+       "       PassengerId  Survived  Pclass   Age  SibSp  Parch  Fare\n",
+       "count        891.0     891.0   891.0 714.0  891.0  891.0 891.0\n",
+       "mean         446.0       0.4     2.3  29.7    0.5    0.4  32.2\n",
+       "std          257.4       0.5     0.8  14.5    1.1    0.8  49.7\n",
+       "min            1.0       0.0     1.0   0.4    0.0    0.0   0.0\n",
+       "25%          223.5       0.0     2.0  20.1    0.0    0.0   7.9\n",
+       "50%          446.0       0.0     3.0  28.0    0.0    0.0  14.5\n",
+       "75%          668.5       1.0     3.0  38.0    1.0    0.0  31.0\n",
+       "max          891.0       1.0     3.0  80.0    8.0    6.0 512.3"
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -742,75 +712,54 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "       PassengerId  Survived  Pclass   Age  SibSp  Parch  Fare\n",
-       "count        891.0     891.0   891.0 714.0  891.0  891.0 891.0\n",
-       "mean         446.0       0.4     2.3  29.7    0.5    0.4  32.2\n",
-       "std          257.4       0.5     0.8  14.5    1.1    0.8  49.7\n",
-       "min            1.0       0.0     1.0   0.4    0.0    0.0   0.0\n",
-       "25%          223.5       0.0     2.0  20.1    0.0    0.0   7.9\n",
-       "50%          446.0       0.0     3.0  28.0    0.0    0.0  14.5\n",
-       "75%          668.5       1.0     3.0  38.0    1.0    0.0  31.0\n",
-       "max          891.0       1.0     3.0  80.0    8.0    6.0 512.3"
       ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
-   "source": [
-    "labelled_df.describe()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "30c588a9-f60e-447a-b832-36cf5baf786a",
-   "metadata": {},
    "source": [
     "### Trying out different combinations of features"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "01a51663-ed3b-4042-a305-4e65bd471d0d",
-   "metadata": {},
+   "execution_count": 8,
+   "source": [
+    "men = labelled_df.loc[labelled_df.Sex == 'male']['Survived']\r\n",
+    "women = labelled_df.loc[labelled_df.Sex == 'female']['Survived']\r\n",
+    "rate_men = sum(men)/len(men)\r\n",
+    "rate_women = sum(women)/len(women)\r\n",
+    "\r\n",
+    "print('Number of males:     : {}'.format(len(men)))\r\n",
+    "print('Number of females    : {}'.format(len(women)))\r\n",
+    "print('Male survival rate   : {:.2f}%'.format(rate_men * 100))\r\n",
+    "print('Female survival rate : {:.2f}%'.format(rate_women * 100))"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
+      "Number of males:     : 577\n",
+      "Number of females    : 314\n",
       "Male survival rate   : 18.89%\n",
       "Female survival rate : 74.20%\n"
      ]
     }
    ],
-   "source": [
-    "men = labelled_df.loc[labelled_df.Sex == 'male']['Survived']\n",
-    "women = labelled_df.loc[labelled_df.Sex == 'female']['Survived']\n",
-    "rate_men = sum(men)/len(men)\n",
-    "rate_women = sum(women)/len(women)\n",
-    "\n",
-    "print('Male survival rate   : {:.2f}%'.format(rate_men * 100))\n",
-    "print('Female survival rate : {:.2f}%'.format(rate_women * 100))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df1ea878-2174-438d-acd4-7ed46efd1b00",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.6 64-bit ('tf-accel': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -823,6 +772,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.6"
+  },
+  "interpreter": {
+   "hash": "5facf633d915b91961ccba9a24a241aa7b1e4aca74b3645c59d55ecae4123c80"
   }
  },
  "nbformat": 4,
